# team-solver

./: .gitignore  LICENSE  README.md  optimize_teams.py  pyproject.toml
.github/workflows/: pages.yml
docs/: CNAME  app.js  index.html  optimizer.js  parser.js  styles.css
optimizer/: __init__.py  cli.py  genetic_algorithm.py  models.py  parser.py
web/: app.js  index.html  optimizer.js
