[project]
name = "softball-team-optimizer"
version = "1.0.0"
description = "AI-powered team balancing for softball leagues using genetic algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Team Solver Contributors" }
]
keywords = ["softball", "team", "optimizer", "genetic-algorithm", "sports"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "deap>=1.4.1",
]

# CLI entry point - use "uv run python optimize_teams.py" instead
# [project.scripts]
# optimize-teams = "optimizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["optimizer"]

[dependency-groups]
dev = []

